--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
     <script type = "module" src = "main.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/@otplib/preset-browser@^12.0.0/buffer.js"></script>
+    <script src="https://unpkg.com/@otplib/preset-browser@^12.0.0/index.js"></script>
 </head>
 <body>
     <p>
