--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel = "stylesheet" href = "style.css">
     <script type = "module" src = "main.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/@otplib/preset-browser@^12.0.0/buffer.js"></script>
     <script src="https://unpkg.com/@otplib/preset-browser@^12.0.0/index.js"></script>
 </head>
 <body>
-    <p>
-        Check the console
-    </p>
+    <div class = "header"></div>
+    <div class = "grid">
+        <div class = "grid name">SBI - IN Stock Price</div>
+        <div class = "grid title">Last traded price</div><div class = "grid info"></div>
+    </div>
 </body>
 </html>
